--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .App-lobody {
+  font-family: "Open Sans Condensed", sans-serif;
+}
+go {
     animation: App-logo-spin infinite 20s linear;
   }
 }
